#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(Arm Examples, 1.0, Guillaume.Huard@imag.fr, arm-examples)

AC_MSG_NOTICE([=======> configuring ARM examples for loader])

AC_CONFIG_AUX_DIR([../build-aux])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([example1.s])
AC_CONFIG_HEADER([config.h])

VD_CONFIG_CROSS_ARM

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
